<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="iuri_nanodegree_app">Iuri\'s Nanodegree Apps!</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_your_app_material">Make your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="will_laucnh_movies_app">This button will launch popular movies app!</string>
    <string name="will_laucnh_stock_app">This button will launch stock hawk app!</string>
    <string name="will_laucnh_build_it_app">This button will launch build it bigger app!</string>
    <string name="will_laucnh_material_app">This button will launch material app!</string>
    <string name="will_laucnh_ubiquitous_app">This button will launch go ubiquitous app!</string>
    <string name="will_laucnh_capstone_app">This button will launch capstone app!</string>
</resources>
