<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.github.iurimenin.nanodegreeapps.MainActivity">

    <TextView
        android:id="@+id/textViewApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryText"
        android:layout_centerHorizontal="true"
        android:text="@string/iuri_nanodegree_app"/>

    <android.support.v7.widget.AppCompatButton
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryText"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/popular_movies"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewApps"
        android:id="@+id/appCompatButtonPopularMovies"/>

    <android.support.v7.widget.AppCompatButton
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryText"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/stock_hawk"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appCompatButtonPopularMovies"
        android:id="@+id/appCompatButtonStockHawk"/>

    <android.support.v7.widget.AppCompatButton
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryText"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/build_it_bigger"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appCompatButtonStockHawk"
        android:id="@+id/appCompatButtonBuildItBigger"/>

    <android.support.v7.widget.AppCompatButton
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryText"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/make_your_app_material"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appCompatButtonBuildItBigger"
        android:id="@+id/appCompatButtonMakeYoutAppMaterial"/>

    <android.support.v7.widget.AppCompatButton
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryText"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/go_ubiquitous"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appCompatButtonMakeYoutAppMaterial"
        android:id="@+id/appCompatButtonGoUbiquitous"/>

    <android.support.v7.widget.AppCompatButton
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryText"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/capstone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appCompatButtonGoUbiquitous"
        android:id="@+id/appCompatButtonCapstone"/>
</RelativeLayout>
